--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 /vendor
+/tools/vendor
 /bin
 !/bin/validate-json
 coverage
 .buildpath
 .project
 .settings
-.php_cs
-.php_cs.cache
+/.php-cs-fixer.cache
 composer.lock
 docs-api
 phpunit.xml
