--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,9 @@
         "icecave/parity": "^3.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "~2.2.20 || ~2.19.0",
         "json-schema/json-schema-test-suite": "1.2.0",
         "phpunit/phpunit": "^8.5",
-        "phpspec/prophecy": "^1.19",
-        "phpstan/phpstan": "^1.12",
-        "marc-mabe/php-enum-phpstan": "^2.0"
+        "phpspec/prophecy": "^1.19"
     },
     "extra": {
         "branch-alias": {
@@ -74,11 +71,11 @@
     ],
     "scripts": {
         "coverage": "phpunit --coverage-text",
-        "style-check": "php-cs-fixer fix --dry-run --verbose --diff",
-        "style-fix": "php-cs-fixer fix --verbose",
+        "style-check": "tools/vendor/bin/php-cs-fixer fix --dry-run --verbose --diff",
+        "style-fix": "tools/vendor/bin/php-cs-fixer fix --verbose",
         "test": "phpunit",
         "testOnly": "phpunit --colors --filter",
-        "phpstan": "@php phpstan",
-        "phpstan-generate-baseline": "@php phpstan --generate-baseline"
+        "phpstan": "tools/vendor/bin/phpstan",
+        "phpstan-generate-baseline": "tools/vendor/bin/phpstan --generate-baseline"
     }
 }
