--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,12 @@
 parameters:
-    level: 8
+    level: max
     paths:
         - ./src/
-    ignoreErrors: []
-    phpVersion: 70200
+        - ./tests/
+    phpVersion:
+        min: 70200
+        max: 80499
 
 includes:
     - phpstan-baseline.neon
-    - vendor/marc-mabe/php-enum-phpstan/extension.neon
+    - tools/vendor/marc-mabe/php-enum-phpstan/extension.neon
