--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  tests:
+  lint:
     name: "Lint"
 
     runs-on: ubuntu-latest
@@ -27,10 +27,12 @@ jobs:
       - name: "Install PHP"
         uses: "shivammathur/setup-php@v2"
         with:
-          coverage: "none"
+          php-version: "${{ matrix.php-version }}"
           extensions: "intl"
           ini-values: "memory_limit=-1, error_reporting=E_ALL, display_errors=On"
-          php-version: "${{ matrix.php-version }}"
+          coverage: "none"
+          tools: parallel-lint, cs2pr
 
       - name: "Lint PHP files"
-        run: "find src/ -type f -name '*.php' -print0 | xargs -0 -L1 -P4 -- php -l -f"
+        run: |
+          parallel-lint . --checkstyle --exclude vendor --show-deprecated | cs2pr
