--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,4 +24,8 @@
             <directory>./src/JsonSchema/</directory>
         </whitelist>
     </filter>
+
+    <php>
+        <ini name="memory_limit" value="-1"/>
+    </php>
 </phpunit>
