refactor: refactor to 32-bits (plural)

--- a/.github/workflows/continuous-integration-32-bits.yml
+++ b/.github/workflows/continuous-integration-32-bits.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           MAX=$(php -r "echo PHP_INT_MAX;")
           if [ "$MAX" -ne 2147483647 ]; then
-            echo "Error: PHP is not 32-bit (PHP_INT_MAX is $MAX)"
+            echo "Error: PHP is not 32-bits (PHP_INT_MAX is $MAX)"
             exit 1
           fi
         env:
