--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,22 +21,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version:
-          - "7.2"
-          - "7.3"
-          - "7.4"
-          - "8.0"
-          - "8.1"
-          - "8.2"
-          - "8.3"
-          - "8.4"
+        php-version: [ '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
         dependencies: [highest]
         include:
           - php-version: "7.2"
             dependencies: lowest
-#          - php-version: "8.5"
-#            dependencies: highest
-#            experimental: true
+          - php-version: "8.5"
+            dependencies: ignore
+            experimental: true
 
     steps:
       - name: "Checkout"
