--- a/.github/workflows/style-check.yml
+++ b/.github/workflows/style-check.yml
@@ -3,10 +3,10 @@ name: "Style Check"
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   style-check:
