--- a/.gitattributes
+++ b/.gitattributes
@@ -4,7 +4,7 @@
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php-cs-fixer.dist export-ignore
+/.php-cs-fixer.dist.php export-ignore
 /phpstan-baseline.neon export-ignore
 /phpstan.neon export-ignore
 /phpunit.xml.dist export-ignore
