--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 /docs export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
 /.php_cs.dist export-ignore
-/.travis.yml export-ignore
 /phpunit.xml.dist export-ignore
