--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: "PHP Lint"
+name: PHP Lint
 
 on:
   push:
@@ -11,33 +11,31 @@ on:
 
 jobs:
   lint:
-    name: "Lint"
+    name: Lint
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        php-version:
-          - "7.2"
-          - "latest"
+        php-version: ['7.2', '8.3', '8.4', '8.5', latest]
 
     steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v4"
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: "Install PHP"
-        uses: "shivammathur/setup-php@v2"
+      - name: Install PHP
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: "${{ matrix.php-version }}"
-          extensions: "intl"
-          ini-values: "memory_limit=-1, error_reporting=E_ALL, display_errors=On"
-          coverage: "none"
+          php-version: ${{ matrix.php-version }}
+          extensions: intl
+          ini-values: memory_limit=-1, error_reporting=E_ALL, display_errors=On
+          coverage: none
           tools: parallel-lint, cs2pr
 
-      - name: "Lint PHP files"
+      - name: Lint PHP files
         run: |
           parallel-lint . --checkstyle --exclude vendor --show-deprecated | cs2pr
 
-      - name: "Validate conforming class autoloading"
+      - name: Validate conforming class autoloading
         run: |
           composer dump-autoload --no-dev --optimize --strict-psr --strict-ambiguous
