--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,4 +1,4 @@
-name: "PHPStan"
+name: PHPStan
 
 on:
   push:
@@ -9,34 +9,32 @@ on:
       - main
 
 env:
-  COMPOSER_FLAGS: "--ansi --no-interaction --no-progress --prefer-dist"
+  COMPOSER_FLAGS: --ansi --no-interaction --no-progress --prefer-dist
 
 jobs:
   phpstan:
-    name: "PHPStan"
+    name: PHPStan
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        php-version:
-          - "7.2"
-          - "latest"
+        php-version: ['7.2', '8.3', '8.4', '8.5', latest]
 
     steps:
-      - name: "Checkout"
-        uses: "actions/checkout@v4"
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: "Install PHP"
-        uses: "shivammathur/setup-php@v2"
+      - name: Install PHP
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: "${{ matrix.php-version }}"
-          extensions: "intl, zip"
-          ini-values: "memory_limit=-1"
-          coverage: "none"
+          php-version: ${{ matrix.php-version }}
+          extensions: intl, zip
+          ini-values: memory_limit=-1
+          coverage: none
 
-      - name: "Update dependencies"
-        run: "composer update ${{ env.COMPOSER_FLAGS }}"
+      - name: Update dependencies
+        run: composer update ${{ env.COMPOSER_FLAGS }}
 
       - name: Run PHPStan
         run: |
